improve gradient + icons + tooltips

--- a/sos/button/index.html
+++ b/sos/button/index.html
@@ -20,6 +20,7 @@
     <body>
         <header>
             <h1><a href="../../index.html">css-sos</a></h1>
+            <a href="https://github.com/AntVil/css-sos" title="view on GitHub"></a>
         </header>
         <nav>
             <a href="../../sos/button/index.html">button</a>
@@ -55,18 +56,18 @@
                 <input id="info" type="checkbox" />
                 <label for="infoTrigger">info trigger</label>
                 <div>
-                    <input id="infoTriggerHover" type="radio" name="infoTrigger" checked />
-                    <input id="infoTriggerClicked" type="radio" name="infoTrigger" />
+                    <input id="infoTriggerClicked" title="click" type="radio" name="infoTrigger" checked />
+                    <input id="infoTriggerHover" title="hover" type="radio" name="infoTrigger" />
                 </div>
                 <label for="infoLocation">info location</label>
                 <div>
-                    <input id="infoLocationTop" type="radio" name="infoLocation" />
-                    <input id="infoLocationRight" type="radio" name="infoLocation" />
-                    <input id="infoLocationBottom" type="radio" name="infoLocation" />
-                    <input id="infoLocationLeft" type="radio" name="infoLocation" />
+                    <input id="infoLocationTop" title="top" type="radio" name="infoLocation" />
+                    <input id="infoLocationRight" title="right" type="radio" name="infoLocation" />
+                    <input id="infoLocationBottom" title="bottom" type="radio" name="infoLocation" />
+                    <input id="infoLocationLeft" title="left" type="radio" name="infoLocation" />
                 </div>
                 <label for="infoText">info text</label>
-                <input id="infoText" type="text" />
+                <input id="infoText" type="text" value="info text" />
                 <label for="infoTimespan">info timespan</label>
                 <input id="infoTimespan" type="range" min="0" max="2" step="0.1" />
                 <label for="infoWidth">info width</label>
