--- a/sos/checkbox/index.html
+++ b/sos/checkbox/index.html
@@ -20,6 +20,7 @@
     <body>
         <header>
             <h1><a href="../../index.html">css-sos</a></h1>
+            <a href="https://github.com/AntVil/css-sos" title="view on GitHub"></a>
         </header>
         <nav>
             <a href="../../sos/button/index.html">button</a>
@@ -47,8 +48,8 @@
                 <input id="checkboxBorderColor" type="color" />
                 <label for="checkIcon">check icon</label>
                 <div>
-                    <input id="checkIconCheck" type="radio" name="checkIcon" checked />
-                    <input id="checkIconCross" type="radio" name="checkIcon" />
+                    <input id="checkIconCheck" title="check" type="radio" name="checkIcon" checked />
+                    <input id="checkIconCross" title="cross" type="radio" name="checkIcon" />
                 </div>
                 <label for="checkSize">check size</label>
                 <input id="checkSize" type="range" min="10" max="20" />
