--- a/sos/gradient/index.html
+++ b/sos/gradient/index.html
@@ -20,6 +20,7 @@
     <body>
         <header>
             <h1><a href="../../index.html">css-sos</a></h1>
+            <a href="https://github.com/AntVil/css-sos" title="view on GitHub"></a>
         </header>
         <nav>
             <a href="../../sos/button/index.html">button</a>
@@ -37,8 +38,8 @@
             <section id="controls">
                 <label for="gradientType">gradient type</label>
                 <div>
-                    <input id="gradientTypeLinear" type="radio" name="gradientType" checked />
-                    <input id="gradientTypeRadial" type="radio" name="gradientType" />
+                    <input id="gradientTypeLinear" title="linear" type="radio" name="gradientType" checked />
+                    <input id="gradientTypeRadial" title="radial" type="radio" name="gradientType" />
                 </div>
                 <label for="gradientAngle">gradient angle</label>
                 <input id="gradientAngle" type="range" min="0" max="360" />
