--- a/sos/scrollbar/index.html
+++ b/sos/scrollbar/index.html
@@ -20,6 +20,7 @@
     <body>
         <header>
             <h1><a href="../../index.html">css-sos</a></h1>
+            <a href="https://github.com/AntVil/css-sos" title="view on GitHub"></a>
         </header>
         <nav>
             <a href="../../sos/button/index.html">button</a>
@@ -37,8 +38,8 @@
             <section id="controls">
                 <label for="trackStyle">track style</label>
                 <div>
-                    <input id="trackStyleThin" type="radio" name="trackStyle" checked>
-                    <input id="trackStyleThick" type="radio" name="trackStyle" />
+                    <input id="trackStyleThin" title="thin" type="radio" name="trackStyle" checked>
+                    <input id="trackStyleThick" title="thick" type="radio" name="trackStyle" />
                 </div>
                 <label for="trackColor">track color</label>
                 <input id="trackColor" type="color" />
