--- a/sos/select/index.html
+++ b/sos/select/index.html
@@ -20,6 +20,7 @@
     <body>
         <header>
             <h1><a href="../../index.html">css-sos</a></h1>
+            <a href="https://github.com/AntVil/css-sos" title="view on GitHub"></a>
         </header>
         <nav>
             <a href="../../sos/button/index.html">button</a>
@@ -53,8 +54,8 @@
                 <input id="selectHoverColor" type="color" />
                 <label for="arrowIcon">arrow icon</label>
                 <div>
-                    <input id="arrowIconCorner" type="radio" name="arrowIcon" checked>
-                    <input id="arrowIconTriangle" type="radio" name="arrowIcon" />
+                    <input id="arrowIconCorner" title="corner" type="radio" name="arrowIcon" checked>
+                    <input id="arrowIconTriangle" title="triangle" type="radio" name="arrowIcon" />
                 </div>
                 <label for="arrowXSize">arrow x size</label>
                 <input id="arrowXSize" type="range" min="3" max="15" />
