--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <link rel="stylesheet" type="text/css" href="./styles/index.css">
     </head>
     <body>
-        <header><h1><a href="./index.html">css-sos</a></h1></header>
+        <header>
+            <h1><a href="./index.html">css-sos</a></h1>
+            <a href="https://github.com/AntVil/css-sos" title="view on GitHub"></a>
+        </header>
         <nav>
             <a href="./sos/button/index.html">button</a>
             <a href="./sos/color/index.html">color</a>
